# mqtt_influx_connector

./: CMakeLists.txt  README.md  config.json
src/: json_parser.c  json_parser.h  main.c
